Cleaned up repository classes and fixed nullability issues.